--- a/tools/src/apps/patrimony/Patrimony.css
+++ b/tools/src/apps/patrimony/Patrimony.css
@@ -296,6 +296,8 @@
   user-select: none;
   font-size: 13px;
   line-height: 1;
+  touch-action: none;
+  -webkit-user-drag: none;
 }
 
 .drag-row-handle:hover {
